--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>nnlohk5</title>
 </head>
 <body>
-    <h1>어서오세요! 민호의집에 오신걸 환영합니다.</h1>  
+    <h1>엄마 힘내세요 저는 코딩을 잘 하겠습니다.</h1>  
 </body>
+
 </html>
