--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f9;
-            color: #333;
+            background-color: #f5f5f5; /* 연한 회색 배경 */
+            color: #333; /* 진한 회색 텍스트 */
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #333; /* 짙은 회색 */
             color: white;
             text-align: center;
             padding: 20px;
@@ -22,56 +22,31 @@
             max-width: 800px;
             margin: 30px auto;
             padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            background-color: #fff; /* 흰색 배경 */
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1); /* 부드러운 그림자 */
             border-radius: 8px;
         }
         h1, h2 {
-            text-align: center;
+            margin: 0;
+            color: #333;
         }
         .section {
-            margin-bottom: 20px;
+            margin-bottom: 30px;
         }
         .section h3 {
-            background-color: #e0f7fa;
-            padding: 10px;
-            border-radius: 5px;
+            font-size: 1.2em;
+            color: #555; /* 좀 더 연한 회색 */
+            border-bottom: 2px solid #ddd; /* 얇은 회색 선 */
+            padding-bottom: 10px;
         }
         .section p {
             line-height: 1.6;
+            color: #555; /* 연한 회색 텍스트 */
         }
         footer {
             text-align: center;
             font-size: 14px;
-            color: #888;
+            color: #888; /* 흐릿한 회색 */
             margin-top: 40px;
         }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>최민호의 자기소개서</h1>
-    </header>
-
-    <div class="container">
-        <section class="section">
-            <h2>자기소개</h2>
-            <p>안녕하세요, 저는 태전중학교 2학년에 재학 중인 최민호입니다. 코딩을 배우고 있는 학생으로, 문제 해결에 대한 열정이 있습니다. 또한, 야구를 좋아하고 즐겨 합니다. 다양한 분야에서 도전하고 성장하는 것을 목표로 하고 있습니다.</p>
-        </section>
-
-        <section class="section">
-            <h3>취미와 관심사</h3>
-            <p>저는 야구를 좋아합니다. 주말마다 친구들과 함께 야구를 하며, 협동심과 체력을 키우고 있습니다. 또한, 코딩에 대한 흥미가 커져가면서, 다양한 프로그래밍 언어를 배우고 있습니다. 최근에는 Python을 공부하며 작은 프로젝트를 진행하고 있습니다.</p>
-        </section>
-
-        <section class="section">
-            <h3>미래의 목표</h3>
-            <p>미래에는 IT 분야에서 일하며 사람들에게 도움이 되는 프로그램을 만들고 싶습니다. 또한, 스포츠와 기술을 결합한 혁신적인 프로젝트를 구상해 보고 싶습니다. 지금부터 하나씩 목표를 이루어나가며 성장하는 사람이 되고 싶습니다.</p>
-        </section>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 최민호. 모든 권리 보유.</p>
-    </footer>
-</body>
-</html>
+    </st
