--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <style>
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5; /* 연한 회색 배경 */
+            background-color: #f0f0f0; /* 연한 회색 배경 */
             color: #333; /* 진한 회색 텍스트 */
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #333; /* 짙은 회색 */
-            color: white;
+            background-color: #333; /* 짙은 회색 배경 */
+            color: #fff; /* 흰색 텍스트 */
             text-align: center;
             padding: 20px;
         }
@@ -28,20 +28,20 @@
         }
         h1, h2 {
             margin: 0;
-            color: #333;
+            color: #333; /* 진한 회색 */
         }
         .section {
             margin-bottom: 30px;
         }
         .section h3 {
             font-size: 1.2em;
-            color: #555; /* 좀 더 연한 회색 */
+            color: #666; /* 연한 회색 */
             border-bottom: 2px solid #ddd; /* 얇은 회색 선 */
             padding-bottom: 10px;
         }
         .section p {
             line-height: 1.6;
-            color: #555; /* 연한 회색 텍스트 */
+            color: #666; /* 연한 회색 텍스트 */
         }
         footer {
             text-align: center;
@@ -49,4 +49,12 @@
             color: #888; /* 흐릿한 회색 */
             margin-top: 40px;
         }
-    </st
+    </style>
+</head>
+<body>
+    <header>
+        <h1>최민호의 자기소개서</h1>
+    </header>
+
+    <div class="container">
+        <section class="section">
