--- a/index.html
+++ b/index.html
@@ -58,3 +58,23 @@
 
     <div class="container">
         <section class="section">
+            <h2>자기소개</h2>
+            <p>안녕하세요, 저는 태전중학교 2학년에 재학 중인 최민호입니다. 코딩을 배우고 있으며, 게임과 야구를 좋아하는 학생입니다. 어려운 문제를 해결하는 것을 좋아하고, 새로운 도전을 즐깁니다.</p>
+        </section>
+
+        <section class="section">
+            <h3>취미와 관심사</h3>
+            <p>저는 야구와 게임을 좋아합니다. 야구는 주말마다 친구들과 함께 즐기며 협동심과 체력을 키웁니다. 또한, 게임을 통해 전략적 사고와 빠른 반응 능력을 기르고 있습니다. 특히, 다양한 장르의 게임을 하면서 창의력과 문제 해결 능력을 키우고 있습니다. 게임은 단순한 취미를 넘어서 제 삶의 중요한 부분이기도 합니다.</p>
+        </section>
+
+        <section class="section">
+            <h3>코딩과 미래의 목표</h3>
+            <p>코딩은 제가 가장 열정을 느끼는 분야 중 하나입니다. 문제를 해결하고, 자신만의 프로그램을 만들 수 있다는 점에서 매우 매력적입니다. 미래에는 IT 분야에서 일하며, 게임 개발이나 소프트웨어 개발자로서 사람들에게 도움을 주는 프로그램을 만들고 싶습니다. 현재 Python을 공부하며, 간단한 게임을 만들려고 노력 중입니다.</p>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2025 최민호. 모든 권리 보유.</p>
+    </footer>
+</body>
+</html>
