--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
     </style>
 </head>
 <body>
+    <div style="width:800px; margin:0 auto">
+        <a href="0914.html">학습일지-0914</a>
+    </div>
     <header>
         <h1>최민호의 자기소개서</h1>
     </header>
@@ -78,3 +81,4 @@
     </footer>
 </body>
 </html>
+
