--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin: 0;
             padding: 0;
         }
+        header h1{color: #fff; /* 흰색 텍스트 */}
         header {
             background-color: #333; /* 짙은 회색 배경 */
             color: #fff; /* 흰색 텍스트 */
@@ -80,6 +81,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
